appId: com.lop.budget
name: "TC-42-3: Déplacer toute la série"
tags:
  - recurrence
  - edition
  - wip
---
- runFlow: ../../.maestro/subflows/bootstrap_monthly.yaml

- evalScript: |
    console.log("Scenario: Déplacer toute la série (portée Toute la série)")

# Given l'utilisateur ouvre le détail de l'occurrence "Loyer" du mois courant
# When il choisit de la modifier
# And il sélectionne la portée "Toute la série"
- runFlow:
    file: ../../.maestro/subflows/navigate_to_edit.yaml
    env:
      transactionName: "Loyer"
      scopeSelection: "Toute la série"

# When il remplace la date par {jourCible} (6)
- runFlow:
    file: ../../.maestro/subflows/update_date.yaml
    env:
      target_day: "06"
      target_month: ${output.CURRENT_MONTH_NUM}
      target_year: ${output.CURRENT_YEAR}


# And il enregistre
- tapOn: { id: "common.btn.save" }

# RETOUR  SUR L'ÉCRAN DE DÉTAIL
- assertVisible: { id: "screen.transaction.detail" }
# Vérification date sur détail
- assertVisible:
    text: ".*6 ${output.CURRENT_MONTH_FULL_NAME}.*"
    below:
        text: "Date"

# APPUI BOUTON RETOUR -> RETOUR ÉCRAN DU MOIS
- tapOn: { id: "common.btn.back" }
- assertVisible: { id: "screen.monthly" }

- runFlow:
    when:
      visible: "1 ${output.CURRENT_MONTH_NAME}.*"
    commands:
      - assertNotVisible:
          text: "Loyer"
          below: "1 ${output.CURRENT_MONTH_NAME}.*"
- assertVisible:
    text: "Loyer"
    below: "6 ${output.CURRENT_MONTH_NAME}.*"

- assertNotVisible:
    text: "Loyer"
    index: 1

# RETOUR ACCUEIL -> MOIS SUIVANT
- tapOn: { id: "common.btn.back" }
- assertVisible: { id: "screen.home" }

# VÉRIFICATION MOIS SUIVANT (Déplacé au 6)
- runFlow:
    file: ../../.maestro/subflows/change_month.yaml
    env:
      month_name: ${output.NEXT_MONTH_NAME}
      year: ${output.NEXT_YEAR}
- scrollUntilVisible:
    element: "6 ${output.NEXT_MONTH_NAME}.*"
    direction: DOWN

- assertVisible:
    text: "Loyer"
    below: "6 ${output.NEXT_MONTH_NAME}.*"

- assertNotVisible:
    text: "Loyer"
    index: 1
    below: "6 ${output.NEXT_MONTH_NAME}.*"


# RETOUR ACCUEIL -> MOIS PRÉCÉDENT
- tapOn: { id: "common.btn.back" }
- assertVisible: { id: "screen.home" }

# VÉRIFICATION MOIS PRÉCÉDENT (Déplacé au 6)
- runFlow:
    file: ../../.maestro/subflows/change_month.yaml
    env:
      month_name: ${output.PREV_MONTH_NAME}
      year: ${output.PREV_YEAR}
- scrollUntilVisible:
    element: "6 ${output.PREV_MONTH_NAME}.*"
    direction: DOWN
- assertVisible:
    text: "Loyer"
    below: "6 ${output.PREV_MONTH_NAME}.*"
